--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <p><a href="https://eclass2.nttu.edu.tw/dashboard" target="_self">Open Page 1 in the Same Window</a></p>
 <p><a href="https://chatgpt.com/" target="_blank">Open Page 2 in a New Window</a></p>
+<p><a href="test.html">TEST link</a></p>
 
 </body>
 <html>
