--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!Doctype html>
-<!DOCTYPE heml>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>歡迎</title>
+    <title>Welcome</title>
 </head>
 <body>
-<p><a href="https://eclass2.nttu.edu.tw/dashboard" target="_self">Open Page 1 in the Same Window</a></p>
-<p><a href="https://chatgpt.com/" target="_blank">Open Page 2 in a New Window</a></p>
-<p><a href="test.html">TEST link</a></p>
-
+    <h1>期末作業——個人履歷</h1>
+    <p>
+    	自我介紹自我介紹自我介紹
+    </p>
+    <h5>興趣</h5>
+    <ol>
+    	<li>吃飯</li>
+    	<li>睡覺</li>
+    	<li>打東東</li>
+    </ol>
 </body>
-<html>
+</html>
