--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <title>Welcome</title>
 </head>
 <body>
+	<p><a href="https://chatgpt.com/" target="_self">OpenPage 1 in the Same Window</a></p>
+
+	<p><a href="https://eclass2.nttu.edu.tw/" target="_blank">Open Page 2 in a New Window</a></p>
+
+	<p><a href="text.html">TEXT link</a></p>
+
     <h1>期末作業——個人履歷</h1>
     <p>
-    	自我介紹自我介紹自我介紹
+    	這裡放自我介紹但我還沒想好要寫什麼
     </p>
     <h5>興趣</h5>
     <ol>
