--- a/index.html
+++ b/index.html
@@ -11,16 +11,72 @@
 	<p><a href="https://eclass2.nttu.edu.tw/" target="_blank">Open Page 2 in a New Window</a></p>
 
 	<p><a href="text.html">TEXT link</a></p>
+<hr style="height: 1px; background-color: black">
 
     <h1>期末作業——個人履歷</h1>
+    <a href="https://thara.eoffering.org.tw/"><img src="https://picsum.photos/id/237/200/300"></a>
     <p>
     	這裡放自我介紹但我還沒想好要寫什麼
     </p>
     <h5>興趣</h5>
-    <ol>
+    <ul>
     	<li>吃飯</li>
     	<li>睡覺</li>
     	<li>打東東</li>
-    </ol>
+    </ul>
+    <nav>
+    	<a href="#buildinh">機器人對戰！北一女、建中7校組隊 赴美挑戰全球高中生</a>|
+    	<a href="#attraction">桃園嚴重超速 年暴增75.6％</a>|
+    	<a href="#food">桃園市汙水下水道工程推進至聯新醫院 地方憂衝擊交通</a>|
+    </nav>
+    <main>
+    	<article>
+    		<h2 id="buildinh">機器人對戰！北一女、建中7校組隊 赴美挑戰全球高中生</h2>
+    		匯聚全球高中生共計一萬多隊伍的FRC機器人國際競賽，將於今年3月在美國舉辦，台北市7所學校參賽，教育局也挹注278萬經費，在設備、培訓訓練等花功伕。參賽學生代表們也運用時下熱門AI大數據等，開發出App系統，他們體悟，FRC宗旨在於互助，不管敵我都在最好的狀態下勝利。
+			FRC機器人國際競賽今年以「海洋探索」為主題，透過模擬海洋挑面臨的生態、廢棄物等，使機器人利用投、取技術作為分數，而環境打造珊瑚礁結構、模擬駁船收集網、吊籠等進行比賽。
+			台北市副市長林奕華出席授旗、打氣。她說，今年由建國中學、北一女中、成功高中、麗山高中、南港高工、大安高工、復興實驗中學，七組學校組成「Taipei Alliance」將於3月前往美國各地參加區域賽，市府今年挹注278萬元經費，作為添購設備、賽事報名費、模擬賽事支援。
+
+
+			北一女中隊長楊甜恩說，今年賽事不同以往是機器人的高度如何抬升，需要更多的細節做調整。她分享，不少國內外團隊會將點子放在社群上，面對龐大的資訊量，該怎麼擷取自身所需，將機器人的意外降到最低、動作流暢運動，這是一大挑戰。
+
+
+			目前高二生的楊甜恩，去年曾和學姊們打入休士頓的決賽，她感動，FRC的宗旨在於互助、影響力，「賽場上如果對手的機器人壞掉，我們也會幫忙修復，因為也希望對手也是在最好狀態下比賽。」
+
+
+			建國中學更透過2年多時間，研發出分析對手落點的App，建國中學機研隊長章宸瑋介紹，由於賽場上要知道每個機器人狀況，到最後賽事階段也要互相配合組成聯隊，因此這項App能夠分析出機器得分需要多少時間、記錄每個動作，輸出成雷達圖，「App還衝到App store前幾名。」
+
+
+			面對AI等科技進展，也能運用技術導入到機器人身上。章宸瑋認為，台灣隊伍在機器人的機構上做的很不錯，但是控制的精準確實多需要靠肉眼，仍待加強，因此用機器、照片去學習精準，AI運用一定是未來趨勢。
+		</article>
+		<article>
+			<h3 id="attraction">桃園嚴重超速 年暴增75.6％</h3>
+			賴佑維／桃園報導
+			2025年3月2日 週日 上午4:10
+			桃園市警局表示，2023年6月30日起，超速超過40公里以上屬嚴重超速，除罰鍰1萬2000元至3萬6000元，還要吊扣車牌6個月。警方統計，2023年舉發3638件，修法後放寬取締範圍，2024年舉發6390件，暴增75.6％，呼籲民眾遵守法規。
+
+			過去超速60公里以上才屬嚴重超速，但為降低車禍件數及傷亡狀況，2023年6月30日起，下修到超速40公里就屬嚴重超速。警方表示，許多文獻研究指出，車速是影響交通安全最重要的一環，若速度降低，交通安全就會提升。主要是車速太快，駕駛人應變時間就會縮短，此外在車速高的情況下碰撞，傷害也會提升，較容易發生傷亡事故。
+
+			警方指出，容易發生嚴重超速熱點主要在地廣人稀的郊區，因道路寬敞車又少，駕駛人會不自覺超速。不過若是半夜的市區，因為人車稀少，也是超速的熱點。警方分析，2023年6月30日修法後，嚴重超速下修到40公里，舉發案件隨之暴增，也會加強宣導，呼籲民眾小心駕駛。
+
+			桃園市警察局交通警察大隊大隊長李維振提醒民眾，如果超過最高速限40公里，舉發機關通常會開罰2張同時間及同地點的嚴重超速罰單，1張針對駕駛人處以罰鍰，另1張針對車主處以扣牌6個月處分。有民眾質疑一罪二罰，他說明，依《行政罰法》第24條第2項，違反行政法上義務行為，除應處罰鍰外，另有沒入或其他種類行政罰之處罰者，得依該規定併為裁處，因此二者皆需處罰，並無一罪二罰情事。
+
+			另依據《道路交通管理處罰條例》第85條之1第2項，逕行舉發行車速度超過規定最高速限，其違規地點相距6公里以上、時間相隔6分鐘以上或行經1個路口以上，得連續舉發。李維振呼籲，嚴重超速已下修為40公里，如符合相關規定得連續舉發，且駕駛人、車主都會處罰，請民眾遵守道路速限行駛。
+		</article>
+		<article>
+			<h4 id="food">桃園市汙水下水道工程推進至聯新醫院 地方憂衝擊交通</h4>
+			桃園市汙水下水道工程將於平鎮區廣泰路立坑，目前仍在試挖階段，不過市議員舒翠玲表示，屆時正式開挖對周邊學校、醫院影響甚巨，建議夜間施工並提供完善交通維持計畫。水務局回應，試挖已結束，目前預計立22個坑，並放置400mm管徑的汙水管，交維計畫尚未審理，預計今年6月過後會逐步立坑圍設圍籬。
+			舒翠玲表示，汙水下水道現在一直在興建中，先前廣泰路試挖，挖完立刻回填，對地方影響是小，但後續若確認完畢，開始試挖後，對地方交通恐造成強烈衝擊，因該路為聯新國際醫院大門，若不安排妥當，可能會影響到救護車進出。
+			舒翠玲說，且廣泰路上有許多機車車格，加上周邊還有學校，且是中壢、平鎮往來要道，原先上下班時間已經有大量車流通行，若不好好規畫交通維持計畫，恐會穴上加霜，引發民怨。
+
+
+			舒翠玲也建議，看是否能協調施工單位，盡量縮小工程空間，並於夜間施工，讓地方交通衝擊降至最低。
+
+
+			水務局汙水促參計畫工程科說，目前預計立22個坑，並放置400mm管徑的汙水管，交維計畫送交市府交通局，但尚未開會審查，立坑完成會以覆工蓋板恢復道路交通，後續預計今年6月過後會逐步立坑圍設圍籬，以一路段最多3處為限，讓交通影響降低。
+
+
+			汙水促參計畫工程科表示，至於夜間施工較有困難，因周邊有醫院恐較難執行，但一定將交通危害減到最低。
+		</article>
+
 </body>
 </html>
