--- a/index.html
+++ b/index.html
@@ -1,82 +1,393 @@
-<!Doctype html>
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
 <head>
-	<meta charset="UTF-8">
-    <title>Welcome</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>自我介紹 - 我的興趣與生活</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Microsoft JhengHei", sans-serif;
+      background: linear-gradient(to right, #ece9e6, #ffffff);
+      color: #333;
+      line-height: 1.8;
+    }
+
+    header {
+      background-color: #1e88e5;
+      color: white;
+      padding: 40px 0;
+      text-align: center;
+    }
+
+    .profile-img {
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 5px solid white;
+      margin-top: 10px;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 30px;
+    }
+
+    h2 {
+      color: #1e88e5;
+      margin-top: 40px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    .quote {
+      background-color: #f0f8ff;
+      border-left: 6px solid #1e88e5;
+      padding: 15px;
+      font-style: italic;
+      margin: 20px 0;
+    }
+
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;   /* 允許換行 */
+      gap: 15px;
+      margin-top: 15px;
+    }
+
+
+    .gallery img {
+      width: 300px;       /* 固定寬度 */
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: opacity 0.5s ease-in-out;
+    }
+
+    .skill-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+    }
+
+    .two-column-list {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 8px 20px;
+      list-style: disc inside;
+      padding-left: 0;
+    }
+
+    .card {
+      background: #fafafa;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+
+    .food-frame {
+      margin-top: 2rem;
+      padding: 10px;
+      width: 300px;
+      height: 300px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 15px;
+      background-color: transparent;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1); /* 微微的陰影 */
+    }
+
+    .food-frame img {
+      max-width: 100%;
+      max-height: 100%;
+      border-radius: 10px;
+      transition: opacity 0.3s ease;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+      background: #f0f0f0;
+      font-size: 14px;
+      color: gray;
+    }
+
+    .fade-in {
+      animation: fadeIn 1.2s ease-in-out;
+    }
+
+    .fade-img {
+      opacity: 0;
+      transition: opacity 0.6s ease-in-out;
+    }
+    .fade-img.show {
+      opacity: 1;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    nav {
+      text-align: center;
+      margin: 20px 0; 
+    }
+
+    html {
+      scroll-behavior: smooth;
+    }
+
+    #backToTop {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      padding: 10px 15px;
+      background-color: #333;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      opacity: 0.7;
+      transition: opacity 0.3s;
+      z-index: 1000;
+      display: none;
+    }
+    #backToTop:hover {
+      opacity: 1;
+    }
+
+  </style>
 </head>
 <body>
-	<p><a href="https://chatgpt.com/" target="_self">OpenPage 1 in the Same Window</a></p>
 
-	<p><a href="https://eclass2.nttu.edu.tw/" target="_blank">Open Page 2 in a New Window</a></p>
+  <header class="fade-in">
+    <h1>陳禹慈的期末自我介紹網站</h1>
+    <p>台東大學綠資系二年級</p>
+    <p>身高151 ｜ 貓咪萬歲 ｜ 偏科戰士</p>
+    <img src="我的照片.jpg" alt="個人照片" class="profile-img">
+  </header>
 
-	<p><a href="text.html">TEXT link</a></p>
-<hr style="height: 1px; background-color: black">
+  <nav>
+    <a href="#learn">學經歷</a>|
+    <a href="#live">我的生活</a>|
+    <a href="#can_or_not">強項&弱項</a>|
+    <a href="#cat">貓貓</a>|
+    <a href="#game">動漫與遊戲</a>|
+    <a href="#future">未來規劃</a>|
+    <a href="#123">座右銘</a>|
+    <a href="#me">聯絡我</a>
+  </nav>
 
-    <h1>期末作業——個人履歷</h1>
-    <a href="https://thara.eoffering.org.tw/"><img src="https://picsum.photos/id/237/200/300"></a>
-    <p>
-    	這裡放自我介紹但我還沒想好要寫什麼
-    </p>
-    <h5>興趣</h5>
+  <div class="container fade-in">
+
+    <h2 id="learn">學經歷</h2>
+    <div class="quote">土生土長的桃園人。</div>
     <ul>
-    	<li>吃飯</li>
-    	<li>睡覺</li>
-    	<li>打東東</li>
+      <li>桃園市立成功國小</li>
+        <ul>
+         <li>鋼琴</li>
+         <li>合唱團</li>
+         <li>烏克莉莉</li>
+        </ul>
+      <li>桃園市立慈文國中</li>
+        <ul>
+          <li>管樂團</li>
+          <li>女童軍</li>
+        </ul>
+      <li>桃園市立永豐高中</li>
+        <ul>
+          <li>管樂社</li>
+          <li>數理學科能力競賽</li>
+        </ul>
+      <li>國立台東大學</li>
+        <ul>
+          <li>NSSSE研討會</li>
+          <li>專題製作——視網膜辨識</li>
+        </ul>
     </ul>
-    <nav>
-    	<a href="#buildinh">機器人對戰！北一女、建中7校組隊 赴美挑戰全球高中生</a>|
-    	<a href="#attraction">桃園嚴重超速 年暴增75.6％</a>|
-    	<a href="#food">桃園市汙水下水道工程推進至聯新醫院 地方憂衝擊交通</a>|
-    </nav>
-    <main>
-    	<article>
-    		<h2 id="buildinh">機器人對戰！北一女、建中7校組隊 赴美挑戰全球高中生</h2>
-    		匯聚全球高中生共計一萬多隊伍的FRC機器人國際競賽，將於今年3月在美國舉辦，台北市7所學校參賽，教育局也挹注278萬經費，在設備、培訓訓練等花功伕。參賽學生代表們也運用時下熱門AI大數據等，開發出App系統，他們體悟，FRC宗旨在於互助，不管敵我都在最好的狀態下勝利。
-			FRC機器人國際競賽今年以「海洋探索」為主題，透過模擬海洋挑面臨的生態、廢棄物等，使機器人利用投、取技術作為分數，而環境打造珊瑚礁結構、模擬駁船收集網、吊籠等進行比賽。
-			台北市副市長林奕華出席授旗、打氣。她說，今年由建國中學、北一女中、成功高中、麗山高中、南港高工、大安高工、復興實驗中學，七組學校組成「Taipei Alliance」將於3月前往美國各地參加區域賽，市府今年挹注278萬元經費，作為添購設備、賽事報名費、模擬賽事支援。
 
+    <h2 id="live">我的生活</h2>
 
-			北一女中隊長楊甜恩說，今年賽事不同以往是機器人的高度如何抬升，需要更多的細節做調整。她分享，不少國內外團隊會將點子放在社群上，面對龐大的資訊量，該怎麼擷取自身所需，將機器人的意外降到最低、動作流暢運動，這是一大挑戰。
+    <div class="skill-grid">
+      <div class="card">
+        <h3>休閒時間</h3>
+        <ul class="two-column-list">
+          <li>貓</li>
+          <li>吃飯</li>
+          <li>睡覺</li>
+          <li>聽音樂</li>
+          <li>看動漫</li>
+          <li>玩手機</li>
+          <li>摸貓貓</li>
+          <li>吸貓貓</li>
+        </ul>
+      </div>
 
+      <div class="card">
+        <h3>技能</h3>
+        <ul>
+          <li>做甜點</li>
+          <li>吃甜點</li>
+          <li>抱貓貓</li>
+          <li>養貓貓</li>
+        </ul>
+      </div>
+    </div>
 
-			目前高二生的楊甜恩，去年曾和學姊們打入休士頓的決賽，她感動，FRC的宗旨在於互助、影響力，「賽場上如果對手的機器人壞掉，我們也會幫忙修復，因為也希望對手也是在最好狀態下比賽。」
+    <div class="food-frame">
+      <img id="food-image" src="eat1.jpg" alt="食物圖片">
+    </div>
 
+    <script>
+      const foodImages = ["eat1.jpg","eat2.jpg","eat3.jpg","eat4.jpg","make1.jpg","make2.jpg","make3.jpg","make4.jpg","make5.jpg"];
 
-			建國中學更透過2年多時間，研發出分析對手落點的App，建國中學機研隊長章宸瑋介紹，由於賽場上要知道每個機器人狀況，到最後賽事階段也要互相配合組成聯隊，因此這項App能夠分析出機器得分需要多少時間、記錄每個動作，輸出成雷達圖，「App還衝到App store前幾名。」
+      let lastIndex = -1; 
 
+      function changeFoodImage() {
+        const imageElement = document.getElementById("food-image");
 
-			面對AI等科技進展，也能運用技術導入到機器人身上。章宸瑋認為，台灣隊伍在機器人的機構上做的很不錯，但是控制的精準確實多需要靠肉眼，仍待加強，因此用機器、照片去學習精準，AI運用一定是未來趨勢。
-		</article>
-		<article>
-			<h3 id="attraction">桃園嚴重超速 年暴增75.6％</h3>
-			賴佑維／桃園報導
-			2025年3月2日 週日 上午4:10
-			桃園市警局表示，2023年6月30日起，超速超過40公里以上屬嚴重超速，除罰鍰1萬2000元至3萬6000元，還要吊扣車牌6個月。警方統計，2023年舉發3638件，修法後放寬取締範圍，2024年舉發6390件，暴增75.6％，呼籲民眾遵守法規。
+        let randomIndex;
+        do {
+          randomIndex = Math.floor(Math.random() * foodImages.length);
+        } while (randomIndex === lastIndex);
 
-			過去超速60公里以上才屬嚴重超速，但為降低車禍件數及傷亡狀況，2023年6月30日起，下修到超速40公里就屬嚴重超速。警方表示，許多文獻研究指出，車速是影響交通安全最重要的一環，若速度降低，交通安全就會提升。主要是車速太快，駕駛人應變時間就會縮短，此外在車速高的情況下碰撞，傷害也會提升，較容易發生傷亡事故。
+        lastIndex = randomIndex; 
 
-			警方指出，容易發生嚴重超速熱點主要在地廣人稀的郊區，因道路寬敞車又少，駕駛人會不自覺超速。不過若是半夜的市區，因為人車稀少，也是超速的熱點。警方分析，2023年6月30日修法後，嚴重超速下修到40公里，舉發案件隨之暴增，也會加強宣導，呼籲民眾小心駕駛。
+        imageElement.style.opacity = 0;
+        setTimeout(() => {
+          imageElement.src = foodImages[randomIndex];
+          imageElement.style.opacity = 1;
+        }, 500);
+      }
 
-			桃園市警察局交通警察大隊大隊長李維振提醒民眾，如果超過最高速限40公里，舉發機關通常會開罰2張同時間及同地點的嚴重超速罰單，1張針對駕駛人處以罰鍰，另1張針對車主處以扣牌6個月處分。有民眾質疑一罪二罰，他說明，依《行政罰法》第24條第2項，違反行政法上義務行為，除應處罰鍰外，另有沒入或其他種類行政罰之處罰者，得依該規定併為裁處，因此二者皆需處罰，並無一罪二罰情事。
+      setInterval(changeFoodImage, 3000);
+      window.onload = changeFoodImage;
+    </script>
 
-			另依據《道路交通管理處罰條例》第85條之1第2項，逕行舉發行車速度超過規定最高速限，其違規地點相距6公里以上、時間相隔6分鐘以上或行經1個路口以上，得連續舉發。李維振呼籲，嚴重超速已下修為40公里，如符合相關規定得連續舉發，且駕駛人、車主都會處罰，請民眾遵守道路速限行駛。
-		</article>
-		<article>
-			<h4 id="food">桃園市汙水下水道工程推進至聯新醫院 地方憂衝擊交通</h4>
-			桃園市汙水下水道工程將於平鎮區廣泰路立坑，目前仍在試挖階段，不過市議員舒翠玲表示，屆時正式開挖對周邊學校、醫院影響甚巨，建議夜間施工並提供完善交通維持計畫。水務局回應，試挖已結束，目前預計立22個坑，並放置400mm管徑的汙水管，交維計畫尚未審理，預計今年6月過後會逐步立坑圍設圍籬。
-			舒翠玲表示，汙水下水道現在一直在興建中，先前廣泰路試挖，挖完立刻回填，對地方影響是小，但後續若確認完畢，開始試挖後，對地方交通恐造成強烈衝擊，因該路為聯新國際醫院大門，若不安排妥當，可能會影響到救護車進出。
-			舒翠玲說，且廣泰路上有許多機車車格，加上周邊還有學校，且是中壢、平鎮往來要道，原先上下班時間已經有大量車流通行，若不好好規畫交通維持計畫，恐會穴上加霜，引發民怨。
+    <h2 id="can_or_not">強項&弱項</h2>
+    <div class="skill-grid">
+      <div class="card">
+        <h3>強項</h3>
+        <ul>
+          <li>理科</li>
+          <li>python</li>
+          <li>耐心</li>
+          <li>邏輯</li>
+        </ul>
+      </div>
 
+      <div class="card">
+        <h3>弱項</h3>
+        <ul>
+          <li>文科</li>
+          <li>體育</li>
+          <li>記憶力</li>
+          <li>社交</li>
+        </ul>
+      </div>
+    </div>
 
-			舒翠玲也建議，看是否能協調施工單位，盡量縮小工程空間，並於夜間施工，讓地方交通衝擊降至最低。
+    <h2 id="cat">貓貓</h2>
+    <p>我家有兩隻貓，<strong>Yuki</strong> 跟 <strong>球球</strong>。我都跟其他人說我們家養了一隻豆漿跟一隻阿瑪。</p>
 
+    <div class="gallery">
+    <img id="cat1Image" src="cat1-1.jpg" alt="Yuki" class="fade-img show" onclick="changeCatImage(1)">
+    <img id="cat2Image" src="cat2-1.jpg" alt="球球" class="fade-img show" onclick="changeCatImage(2)">
+    </div>
 
-			水務局汙水促參計畫工程科說，目前預計立22個坑，並放置400mm管徑的汙水管，交維計畫送交市府交通局，但尚未開會審查，立坑完成會以覆工蓋板恢復道路交通，後續預計今年6月過後會逐步立坑圍設圍籬，以一路段最多3處為限，讓交通影響降低。
+    <script>
+      const cat1Images = ["cat1-1.jpg", "cat1-2.jpg", "cat1-3.jpg", "cat1-4.jpg", "cat1-5.jpg"];
+      const cat2Images = ["cat2-1.jpg", "cat2-2.jpg", "cat2-3.jpg"];
+      let cat1Index = 0;
+      let cat2Index = 0;
 
+      function changeCatImage(catNumber) {
+        if (catNumber === 1) {
+          const img = document.getElementById("cat1Image");
+          img.classList.remove("show");
+          setTimeout(() => {
+            cat1Index = (cat1Index + 1) % cat1Images.length;
+            img.src = cat1Images[cat1Index];
+            img.classList.add("show");
+          }, 500);
+        } else if (catNumber === 2) {
+          const img = document.getElementById("cat2Image");
+          img.classList.remove("show");
+          setTimeout(() => {
+            cat2Index = (cat2Index + 1) % cat2Images.length;
+            img.src = cat2Images[cat2Index];
+            img.classList.add("show");
+          }, 500);
+        }
+      }
 
-			汙水促參計畫工程科表示，至於夜間施工較有困難，因周邊有醫院恐較難執行，但一定將交通危害減到最低。
-		</article>
+      setInterval(() => {
+        changeCatImage(1);
+        changeCatImage(2);
+      }, 3000);
+    </script>
+
+    <h2 id="game">動漫與遊戲</h2>
+    <p>
+      看過的動漫很多，比較有名的作品像我的英雄學院、進擊的巨人、藥師少女的獨語、我獨自 <del>整形</del> 升級、某科學超電磁炮、葬送的芙莉蓮...等<br>
+      目前正在追Fate系列作品，還有全知讀者視角。<br>
+      遊戲的部分主要玩原神，原本還有玩楓之谷，可是電腦記憶體不夠被我刪掉了ʕ´•ᴥ•̥`ʔ
+    </p>
+
+    <h2 id="future">未來規劃</h2>
+    <p>
+      如無意外的話是繼續往資訊方面發展，有打算在碩士畢業之後去日本一段時間，努力存錢ing<br>
+    </p>
+
+    <h2 id="123">座右銘</h2>
+    <div class="quote">
+      「船到橋頭自然直，沉了就...沉了唄，反正我也撈不起來。」<br>
+      —— 魯迅說他沒說過。
+    </div>
+
+  </div>
+
+  <footer id="me">
+    &copy; 陳禹慈的自我介紹網站 ｜ 
+    聯絡我
+    <a href="mailto:chen940519bbcall@gmail.com" style="margin: 0 15px; text-decoration: none;">
+      <img src="email.png" alt="email" style="width:32px; height:32px; vertical-align: middle;">
+    </a>
+    <a href="tel:+886-2-12345678" style="margin: 0 15px; text-decoration: none;">
+      <img src="call.png" alt="電話" style="width:32px; height:32px; vertical-align: middle;">
+    </a>
+    <a href="images-pica.png" target="_blank" rel="noopener noreferrer" style="margin: 0 15px; text-decoration: none;">
+      <img src="ig.png" alt="Instagram" style="width:32px; height:32px; vertical-align: middle;">
+    </a>
+    <a href="images-pica.png" target="_blank" rel="noopener noreferrer" style="margin: 0 15px; text-decoration: none;">
+      <img src="twitter.png" alt="twitter" style="width:32px; height:32px; vertical-align: middle;">
+    </a>
+    <a href="images-pica.png" target="_blank" rel="noopener noreferrer" style="margin: 0 15px; text-decoration: none;">
+      <img src="dc.png" alt="discord" style="width:32px; height:32px; vertical-align: middle;">
+    </a>
+  </footer>
 
 </body>
+<button id="backToTop">⬆ 回到頂端</button>
+<script>
+  const btn = document.getElementById("backToTop");
+  window.addEventListener("scroll", () => {
+    btn.style.display = window.scrollY > 300 ? "block" : "none";
+  });
+
+  btn.addEventListener("click", () => {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  });
+</script>
+
 </html>
