--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <h1>陳禹慈的期末自我介紹網站</h1>
     <p>台東大學綠資系二年級</p>
     <p>身高151 ｜ 貓咪萬歲 ｜ 偏科戰士</p>
-    <img src="image/我的照片.jpg" alt="我的照片" class="profile-img">
+    <img src="other/我的照片.jpg" alt="我的照片" class="profile-img">
   </header>
 
   <nav>
@@ -269,7 +269,7 @@
 
         imageElement.style.opacity = 0;
         setTimeout(() => {
-          imageElement.src = "image/" + foodImages[randomIndex];
+          imageElement.src = "food/" + foodImages[randomIndex];
           imageElement.style.opacity = 1;
         }, 500);
       }
@@ -315,8 +315,8 @@
       let cat1Index = 0;
       let cat2Index = 0;
 
-      document.getElementById("cat1Image").src = "image/" + cat1Images[0];
-      document.getElementById("cat2Image").src = "image/" + cat2Images[0];
+      document.getElementById("cat1Image").src = "cat1/" + cat1Images[0];
+      document.getElementById("cat2Image").src = "cat2/" + cat2Images[0];
 
       function changeCatImage(catNumber) {
         if (catNumber === 1) {
@@ -324,7 +324,7 @@
           img.classList.remove("show");
           setTimeout(() => {
             cat1Index = (cat1Index + 1) % cat1Images.length;
-            img.src = "image/" + cat1Images[cat1Index];
+            img.src = "cat1/" + cat1Images[cat1Index];
             img.classList.add("show");
           }, 500);
         } else if (catNumber === 2) {
@@ -332,7 +332,7 @@
           img.classList.remove("show");
           setTimeout(() => {
             cat2Index = (cat2Index + 1) % cat2Images.length;
-            img.src = "image/" + cat2Images[cat2Index];
+            img.src = "cat2/" + cat2Images[cat2Index];
             img.classList.add("show");
           }, 500);
         }
@@ -369,19 +369,19 @@
     &copy; 陳禹慈的自我介紹網站 ｜ 
     聯絡我
     <a href="mailto:abc123@gmail.com" style="margin: 0 15px; text-decoration: none;">
-      <img src="image/email.png" alt="email" style="width:32px; height:32px; vertical-align: middle;">
+      <img src="other/email.png" alt="email" style="width:32px; height:32px; vertical-align: middle;">
     </a>
     <a href="tel:+886-2-12345678" style="margin: 0 15px; text-decoration: none;">
-      <img src="image/call.png" alt="電話" style="width:32px; height:32px; vertical-align: middle;">
+      <img src="other/call.png" alt="電話" style="width:32px; height:32px; vertical-align: middle;">
     </a>
-    <a href="image/images-pica.png" target="_blank" rel="noopener noreferrer" style="margin: 0 15px; text-decoration: none;">
-      <img src="image/ig.png" alt="Instagram" style="width:32px; height:32px; vertical-align: middle;">
+    <a href="other/images-pica.png" target="_blank" rel="noopener noreferrer" style="margin: 0 15px; text-decoration: none;">
+      <img src="other/ig.png" alt="Instagram" style="width:32px; height:32px; vertical-align: middle;">
     </a>
-    <a href="image/images-pica.png" target="_blank" rel="noopener noreferrer" style="margin: 0 15px; text-decoration: none;">
-      <img src="image/twitter.png" alt="twitter" style="width:32px; height:32px; vertical-align: middle;">
+    <a href="other/images-pica.png" target="_blank" rel="noopener noreferrer" style="margin: 0 15px; text-decoration: none;">
+      <img src="other/twitter.png" alt="twitter" style="width:32px; height:32px; vertical-align: middle;">
     </a>
-    <a href="image/images-pica.png" target="_blank" rel="noopener noreferrer" style="margin: 0 15px; text-decoration: none;">
-      <img src="image/dc.png" alt="discord" style="width:32px; height:32px; vertical-align: middle;">
+    <a href="other/images-pica.png" target="_blank" rel="noopener noreferrer" style="margin: 0 15px; text-decoration: none;">
+      <img src="other/dc.png" alt="discord" style="width:32px; height:32px; vertical-align: middle;">
     </a>
   </footer>
 
